2013-08-26  6.8.6-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.6-9, SVN revision 13087.

2013-08-16  6.8.6-9  Siu Chi Chan <...@amd.com>
  * Accelerate numerous image filters with OpenCL under AMD, Intel, and
    NVidia.  Adapted from MulticoreWare OpenCL contribution.

2013-08-10  6.8.6-9 Dirk Lemstra <dirk@snakeware..>
  * Added the following command line options to configure.exe:
      /x64, set 64 bit build
      /mtd, set project type to: multi threaded dll
      /sts, set project type to: single threaded static
      /mts, set project type to: multi threaded static
      /mtsd, set project type to: multi threaded static dll
      /noWizard, skip the wizard and generate the project/solution files
  * Fixed infinite loop with jpeg:extent (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23314).
  * Fixed performance issue when converting jpeg to png (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23922).

2013-08-10  6.8.6.9 Glenn Randers-Pehrson <glennrp@image...>
  * Added "-define bmp:format=bmp2|bmp3|bmp4" option (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=23875).

2013-08-07  6.8.6-9 Cristy  <quetzlzacatenango@image...>
  * Free disk resource if cache resources are exhausted (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23877).
  * Return proper EXIF:ISOSpeedRating property value for TIFF images (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23913).
  * Escape MIFF properties with null values (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23931).
  * Allow negative pixel values in TXT image format (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23923).
  * The -fx option no longer crashes for certain expressions (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23932).